<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="350dp"
    android:layout_height="560dp"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

    <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:background="@color/theater_maroon"
            android:orientation="vertical">

        <TextView
            android:id="@+id/tvFilterTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="65dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/movie4"
            android:text="@string/movietitle"
            android:textColor="@color/theater_white"
            android:textSize="13pt" />

        <EditText
            android:id="@+id/etFilterTitle"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/theater_white"
            android:ems="10"
            android:paddingLeft="7dp"
            android:inputType="textPersonName"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/tvFilterGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/movie4"
            android:text="@string/genre"
            android:textColor="@color/theater_white"
            android:textSize="13pt" />

        <Spinner
            android:id="@+id/spnFilterGenre"
            android:layout_width="260dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/theater_white"
            android:entries="@array/genre"
            android:spinnerMode="dialog" />

        <TextView
                android:id="@+id/tvFilterYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/movie4"
                android:text="@string/Year"
                android:textColor="@color/theater_white"
                android:textSize="13pt" />

        <Spinner
            android:id="@+id/spnFilterYear"
            android:layout_width="260dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/theater_white"
            android:spinnerMode="dialog" />

        <TextView
            android:id="@+id/tvFilterAgeRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/movie4"
            android:text="@string/agerating"
            android:textColor="@color/theater_white"
            android:textSize="13pt" />

        <Spinner
            android:id="@+id/spnFilterAgeRating"
            android:layout_width="260dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@color/theater_white"
            android:entries="@array/agerating"
            android:spinnerMode="dialog" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/main_yellow"
                android:fontFamily="@font/movie4"
                android:text="@string/Cancel"
                android:textColor="@color/theater_white"
                android:textSize="19dp" />

            <Button
                android:id="@+id/btnShowList"
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/theater_red"
                android:fontFamily="@font/movie4"
                android:text="@string/show"
                android:textColor="@color/theater_white"
                android:textSize="19dp" />

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivTitle"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:layout_height="130dp"
        android:layout_marginTop="-550dp"
        app:srcCompat="@drawable/viewlogo" />
</LinearLayout>